--- a/WindowExplorer/Sources/Controllers/RecordViewController/Views/MediaItemView.xib
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Views/MediaItemView.xib
@@ -17,9 +17,9 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HQG-s5-ca4">
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HQG-s5-ca4" customClass="AspectFillImageView" customModule="WindowExplorer" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="0nl-mF-9UI"/>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" id="0nl-mF-9UI"/>
                 </imageView>
             </subviews>
             <constraints>
